# EBA-aula06-TesteNaoParametrico

./: README.md  pyproject.toml
notebooks/: aula 6.ipynb
