[tool.poetry]
name = "aula-06-testenaoparametrico"
version = "0.1.0"
description = ""
authors = ["VanGaigher <vanessa.mat.sedu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.11"
pandas = "^2.2.3"
numpy = "^2.1.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
